add jdbc tab